<resources>
    <string name="app_name">task5</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pressure">Pressure</string>
    <string name="wind_speed">Wind speed </string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="Enter">Enter</string>
    <string name="enterCity">Enter City</string>
    <string name="cityError">Неправильно введен город</string>
    <string name="picturerain">picture_Rain</string>
    <string name="dubaiscreen">Dubai</string>
    <string name="_30">+30</string>
    <string name="_3_5_m_s">3-5 m/s</string>
    <string name="_720mm">720mm</string>
    <string name="about">about</string>
    <string name="developed">developed by Andrey Sozonov 2020</string>
    <string name="settings">Settings</string>
    <string name="city_error">Неправильно введен город</string>
    <string name="connection_error">Connection failed</string>
    <string name="history">History</string>
    <string name="ok">OK</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="nearby_weather">Weather Nearby</string>
    <string name="nearby_weather_free"> Weather Nearby only in Pro version</string>
    <string name="backgroundBlue">Background_blue</string>
    <string name="delete">Delete</string>
    <string name="deleteAll">Delete All</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign out</string>
</resources>
