<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.geekbrains.task5.MainActivity">



    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_about"
        android:icon="@android:drawable/ic_menu_help"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_sign_in"
        android:icon="@drawable/googleg_standard_color_18"
        android:orderInCategory="100"
        android:title="@string/sign_in"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_sign_out"
        android:icon="@drawable/common_google_signin_btn_icon_disabled"
        android:orderInCategory="100"
        android:title="@string/sign_out"
        app:showAsAction="never" />


</menu>
